# boxen-client

./: .gitmodules  99-gpio.rules  Cargo.toml  INSTALL.md  README.md  build-local  build-to-pi  install-overlayfs  install-ubuntu-server-21-10  install-ubuntu-server-22-04  run-both  run-local  run-local-valgrind  run-on-pi  run-pis  run-systemd-pis
bonnet/: BONNET.md  bonnet-pinout.txt
cross-image/: Dockerfile.aarch64-unknown-linux-gnu-21-04-base  Dockerfile.aarch64-unknown-linux-gnu-21-04-boxen-client  Dockerfile.aarch64-unknown-linux-gnu-21-04-webrtc-app  Dockerfile.aarch64-unknown-linux-gnu-22-04-base  Dockerfile.aarch64-unknown-linux-gnu-22-04-boxen-client  build.sh
src/: async_test.rs  audio_stream.rs  completable_future.rs  gstreamer_utils.rs  main.rs  signalling.rs  utils.rs  webrtc.rs  webrtc_test.rs
systemd/: boxen-client-run  boxen-client.service  install
usbwifi/: USBWIFI.md  build-debian-package  install  usbwifi  usbwifi-run  usbwifi.rules
